v1.10.6

 AI:
  - AI Russia should no longer do "Challenge NATO" focus if its already at war

 Balance:
  - Changed Polish KTO Rosomak to APC in historical afv decisions

 BugFix:
  - Fixed assasination of Burhanuddin news event popping out for every country in the game
  - Fixed Russia not having Mig21 without BBA DLC

 Content:
  - Added BWP Borsuk to Polish AI templates

v1.10.5

 Achievements:
  - The Spanish focus "Solidify the Iberian Union" should now give you the needed country flag or conditions for the "Formed Iberia" decision
  - Added achievement CzechosloGRANDia: "As Czechoslovakia, control all Czech, Slovakia and former Austro-Hungary territories, Silesia region and Zakarpattya state"
  - Added achievement Czech Monopoly: "Have more §YŠkoda Factories§! and §YŠkoda Research Slots§! than §YIndustrial Complexes§! and §YResearch Slots§! at any time, while having at least 5 §YIndustrial Complexes§!"
  - Added achievement One Man Army: "Train Petr Pavel to at least §Y75%§! in every §YTraining Card§! at the same time"
  - Added achievement Afri-Net: "As an African nation ensure every African state has Network Infrastructure of at least 3"
  - Added achievement Pan-African Highway: "As an African nation have a railway connection from Cairo to Cape Town"

 AI:
  - Added AI to Abkhazia to befriend South Ossetia
  - AI should try to maximize internal faction opinion buffs in general to keep them more on the path
  - Arabian States should befriend one another and become closer to one another via diplomatic options
  - Increased the manpower from the Recruit Foreign Fighters decision from the factions
  - The AI should now build Network Infrastructure when they research the next "G"
  - Russian AI should no longer death war and declare conflict when already at war with NATO
  - The AI should no longer instantly revoke the satellite access it grants and now will hold the access for three months before revoking