@@ -150,6 +150,7 @@ rule_salafist_branch = {
 		desc = "RULE_NO_SALAFIST_BRANCH_DESC"
 	}
 }
+
 BLR_union_state_ai_behavior = {
 	name = "BLR_union_state_ai_behavior"
 	group = "MD_FOCUS_TREE_RULES"
@@ -710,7 +711,7 @@ AI_first_use = {
 		desc = "RULE_NO_AI_FIRST_USE_DESC"
 	}
 }
-#
+
 
 # MISCELLANEOUS MD RULES
 allow_enable_ledger = {
@@ -1383,6 +1384,11 @@ USA_ai_behavior = {
 		name = DEFAULT
 		text = "RULE_OPTION_DEFAULT"
 		desc = "RULE_OPTION_DEFAULT_AI_DESC"
+	}
+	option = {
+		name = USA_historical_presidents_ai
+		text = "RULE_OPTION_HISTORICAL_PRESIDENTS"
+		desc = "RULE_OPTION_HISTORICAL_PRESIDENTS_AI_DESC"
 	}
 	option = {
 		name = DEMOCRAT
