@@ -2280,6 +2280,15 @@ on_actions = {
 					limit = {
 						has_game_rule = {
 							rule = USA_ai_behavior
+							option = USA_historical_presidents_ai
+						}
+					}
+					set_global_flag = GAME_RULE_USA_historical_presidents_ai
+				}
+				if = {
+					limit = {
+						has_game_rule = {
+							rule = USA_ai_behavior
 							option = DEMOCRAT
 						}
 					}
