@@ -257,6 +257,7 @@ trigger_year_2001_events = {
 		country_event = { id = USA_unrest_event.3 days = 1 random_days = 365 } #Grass Root Socialist Movements
 		country_event = { id = USA_unrest_event.4 days = 1 random_days = 365 } #Grass Root Nationalist Movements
 		country_event = { id = USA_econ_event.50 days = 1 random_days = 828 } #Mass Media Event
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
 	}
 	POL = {
 		country_event = { id = poland.11 days = 200 random_days = 30 }
@@ -620,6 +621,7 @@ trigger_year_2005_events = {
 	USA = {
 		country_event = { id = USA_econ_event.25 days = 124 random_days = 61 } #May 2nd, 2005
 		country_event = { id = USA_econ_event.2 days = 355 random_days = 61 } #Dec 20th, 2005
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
 	}
 	CAN = {
 		# American Submarines in the Northwest Passage
@@ -960,6 +962,9 @@ trigger_year_2009_events = {
 		}
 		country_event = { id = iraq_md.200 days = 1 random_days = 360 }
 	}
+	USA = {
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
+	}
 	GER = {
 		country_event = { id = germany_yearly.11 days = 1 random_days = 360 } #
 	}
@@ -1237,6 +1242,9 @@ trigger_year_2013_events = {
 		country_event = { id = germany_yearly.19 days = 1 random_days = 360 }
 		country_event = { id = germany_party.0 days = 36 }
 	}
+	USA = {
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
+	}
 	CAN = {
 		# International Space Station Expedition 35
 		country_event = { id = canada_md_politics.18 days = 136 random_days = 5 }
@@ -1437,6 +1445,9 @@ trigger_year_2017_events = {
 			country_event = { id = brazil.23 days = 5 random_days = 50 }
 		}
 	}
+	USA = {
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
+	}
 	KYR = {
 		if = {
 			limit = {
@@ -1586,6 +1597,7 @@ trigger_year_2021_events = {
 	}
 	USA = {
 		country_event = { id = USA_crisis_event.1006 days = 5 random_days = 25 }
+		country_event = { id = usa.999 days = 20 } #Election (AI Only)
 	}
 	CZE = {
 		# 2021 political rotation
@@ -1626,6 +1638,7 @@ trigger_year_2024_events = {
 	}
 }
 trigger_year_2025_events = {
+	country_event = { id = usa.999 days = 20 } #Election (AI Only)
 }
 trigger_year_2026_events = {
 }
