@@ -17849,3 +17849,222 @@ news_event = {
 	}
 }
 
+# This is for the AI game rule
+country_event = {
+	id = usa.999
+	title = usa.999.t
+	desc = usa.999.d
+	picture = GFX_plane_crash
+	is_triggered_only = yes
+
+	trigger = {
+		is_ai = yes
+		has_global_flag = GAME_RULE_USA_historical_presidents_ai
+	}
+
+	option = { #Sad Day
+		name = usa.999.o1
+		log = "[GetDateText]: [This.GetName]: usa.999.01 executed"
+		if = {
+			limit = {
+				date > 2001.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 1 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "George W. Bush"
+				picture = "George_W_Bush.dds"
+				desc = "GEORGE_BUSH_LEADER_DESC"
+				ideology = conservatism
+				traits = {
+					western_conservatism
+					businessman
+					rational
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2005.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 1 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "George W. Bush"
+				picture = "George_W_Bush.dds"
+				desc = "GEORGE_BUSH_LEADER_DESC"
+				ideology = conservatism
+				traits = {
+					western_conservatism
+					businessman
+					rational
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2009.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 2 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "Barack Obama"
+				desc = "BARACK_OBAMA_LEADER_DESC"
+				picture = "Barack_Obama.dds"
+				ideology = liberalism
+				traits = {
+					lawyer
+					western_liberalism
+					polished
+					honest
+					rational
+					geopolitical_thinker
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2013.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 2 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "Barack Obama"
+				desc = "BARACK_OBAMA_LEADER_DESC"
+				picture = "Barack_Obama.dds"
+				ideology = liberalism
+				traits = {
+					lawyer
+					western_liberalism
+					polished
+					honest
+					rational
+					geopolitical_thinker
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2017.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 1 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "Donald Trump"
+				desc = "DONALD_TRUMP_LEADER_DESC"
+				picture = "Donald_Trump.dds"
+				ideology = conservatism
+				traits = {
+					western_conservatism
+					businessman
+					narcissist
+					greedy
+					emotional
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2021.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 2 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "Joe Biden"
+				picture = "Joe_Biden.dds"
+				ideology = liberalism
+				traits = {
+					western_liberalism
+					career_politician
+					polished
+				}
+			}
+		}
+		else_if = {
+			limit = {
+				date > 2025.1.18
+			}
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 1 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			create_country_leader = {
+				name = "Donald Trump"
+				desc = "DONALD_TRUMP_LEADER_DESC"
+				picture = "Donald_Trump.dds"
+				ideology = conservatism
+				traits = {
+					western_conservatism
+					businessman
+					narcissist
+					greedy
+					emotional
+				}
+			}
+		}
+		ai_chance = {
+			base = 1
+		}
+	}
+}
