@@ -3755,3 +3755,8 @@ USA_foreign_event.19.t: "Formation Of The Damascus Legion"
 USA_foreign_event.19.d: "Volunteers have flocked to our Free Army as a way to pledge their services to help make Syria a free nation, while some are sceptical other believe this is the boost we need to win the war."
 USA_foreign_event.19.o1: "Make Syria Free"
 USA_foreign_event.19.o2: "We Shall Not Submit To Western Influences"
+
+# AI Gamerule Event
+usa.999.t: ""
+usa.999.d: ""
+usa.999.o1: ""
