@@ -113,7 +113,8 @@
  RULE_OPTION_POST_UNITED_AI_DESC: "The Eagle falls far more than from grace. §RDo Not Enable Historical AI§!"
  RULE_OPTION_GREAT_COLLAPSE: "The Great Collapse"
  RULE_OPTION_GREAT_COLLAPSE_AI_DESC: "With the fall of the USSR in 91 the rampant militarism of the United States became slowly more and more of a burden on the tax payer. A series of protests over the course of 1995-99 resulted in ever mounting casualties and resentment among the population and the staunch Cold War stuck federal government. Now reaching a boiling point at the turn of the century on top of fears of Y2K rumors of a national railroad strike are on the rise, a strike that could paralyze the economy and federal abilities to coordinate counter protest operations."
-
+ RULE_OPTION_HISTORICAL_PRESIDENTS: "Historical U.S. Presidents"
+ RULE_OPTION_HISTORICAL_PRESIDENTS_AI_DESC: "The AI will elect presidents on the 20th of January of each election year based on historical victor."
  #Free States Of America
  USB_AI_BEHAVIOR: "@USB Free States Of America"
  RULE_OPTION_REVANCHIST_PATH: "Reclaiming Destiny"
