@@ -12,6 +12,7 @@ v1.10.6
 
  Content:
   - Added BWP Borsuk to Polish AI templates
+  - Added a Gamerule for U.S. AI to inaugurate the historical president on the 20th of January each election year
 
 v1.10.5
 
